<resources>
    <string name="app_name">Smart agriculture</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_registerin">Register in</string>
    <string name="username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_register_in">Register in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="register_in_link">Don\'t have account? click here to register</string>
    <string name="login_error">Could not log in. Try again</string>
    <string name="last_measurement_text">Last measurement</string>
    <string name="save_button">Save</string>
    <string name="add_button">Add agriculture</string>
    <string name="measurments">Measurments</string>
    <string name="devices">Devices</string>
    <string name="agriculture_title">Agriculture Title</string>
    <string name="max_air_temperature">Max air temperature</string>
    <string name="min_air_temperature">Min air temperature</string>
    <string name="max_air_humidity">Max air humidity</string>
    <string name="min_air_humidity">Min air humidity</string>
    <string name="max_pressure">Max pressure</string>
    <string name="min_pressure">Min pressure</string>
    <string name="max_luminosity">Max luminosity</string>
    <string name="min_luminosity">Min luminosity</string>
    <string name="save_text">Save</string>
    <string name="notifications_accept">Send notifications in case of measurements outside of bounderies?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="task_saved_text">Task saved</string>
    <string name="task_not_saved_text">Task not saved</string>
    <string name="max_soil_temp">Max soil temperature</string>
    <string name="min_soil_temperature">Min soil temperature</string>
    <string name="max_soil_humidity">Max soil humidity</string>
    <string name="min_soil_humidity">Min soil humidity</string>
    <string name="warning">Warning!</string>
    <string name="my_tasks_button">My Tasks</string>
    <string name="notifications">Notifications</string>
    <string name="measurements_button_name">Measurements</string>
    <string name="devices_button_name">Devices</string>
    <string name="chanel_name">notifications</string>
    <string name="chanel_description">notifications</string>
</resources>